# parsanol-ruby

./: .gitignore  .rubocop.yml  .rubocop_todo.yml  Cargo.toml  Gemfile  HISTORY.txt  LICENSE  MIGRATION.md  README.adoc  Rakefile  Steepfile  TODO.ruby-bindings-0.4.0.md  parsanol-ruby.gemspec  parsanol.gemspec
.github/: platforms.json
.github/scripts/: test_installed_gem.rb
.github/workflows/: gem-build.yml  native.yml  opal.yml  rake.yml  release.yml  test.yml  wasm.yml
benchmark/: APPROACHES.md  README.md  benchmark_suite.rb  run_all.rb
benchmark/parsers/: express_parsanol.rb  json_parsanol.rb  json_parslet.rb  json_parslet_compat.rb
docs/: CONTINUATION_PLAN.md  FFI_CAPTURE_SCOPE_DYNAMIC.md  IMPLEMENTATION_STATUS.md  MIGRATION_EXPRESSIR.md  PERFORMANCE.md
example/balanced-parens/: basic.rb  basic.rb.md  parens.rb  ruby_transform.rb
example/boolean-algebra/: basic.rb  basic.rb.md  ruby_transform.rb
example/calculator/: basic.rb  basic.rb.md  pattern.rb  ruby_transform.rb  ruby_transform.rb.md  serialized.rb  serialized.rb.md  transform.rb  zero_copy.rb  zero_copy.rb.md
example/capture/: basic.rb  basic.rb.md  example.json
example/captures/: basic.rb  basic.rb.md  example.json
example/comments/: basic.rb  basic.rb.md
example/csv/: ruby_transform.rb  ruby_transform.rb.md  serialized.rb  serialized.rb.md  zero_copy.rb  zero_copy.rb.md
example/custom_atoms/: indent_atom.rb
example/deepest-errors/: basic.rb  basic.rb.md
example/documentation/: basic.rb  basic.rb.md
example/dynamic/: basic.rb  basic.rb.md  example.json
example/email/: basic.rb  basic.rb.md  ruby_transform.rb
example/empty/: basic.rb  basic.rb.md  example.json
example/erb/: basic.rb  basic.rb.md  optimized.rb
example/error-reporting/: basic.rb  basic.rb.md
example/expression-evaluator/: basic.rb  basic.rb.md
example/ini/: basic.rb  basic.rb.md  ruby_transform.rb
example/ip-address/: basic.rb  basic.rb.md
example/iso-6709/: basic.rb  basic.rb.md
example/iso-8601/: basic.rb  basic.rb.md
example/json/: basic.rb  basic.rb.md  ruby_transform.rb  ruby_transform.rb.md  serialized.rb  serialized.rb.md  transform.rb  zero_copy.rb  zero_copy.rb.md
example/local/: basic.rb  basic.rb.md  example.json
example/markdown/: basic.rb  basic.rb.md
example/markup/: basic.rb  basic.rb.md
example/mathn/: basic.rb  basic.rb.md  example.json
example/minilisp/: basic.rb  basic.rb.md
example/modularity/: basic.rb  basic.rb.md
example/nested-errors/: basic.rb  basic.rb.md
example/prec-calc/: basic.rb  basic.rb.md
example/readme/: basic.rb  basic.rb.md
example/scopes/: basic.rb  basic.rb.md  example.json
example/seasons/: basic.rb  basic.rb.md  example.json
example/sentence/: basic.rb  basic.rb.md
example/sexp/: ruby_transform.rb  ruby_transform.rb.md
example/simple-xml/: basic.rb  basic.rb.md
example/streaming-captures/: basic.rb  basic.rb.md  example.json
example/string-literal/: basic.rb  basic.rb.md
example/toml/: basic.rb  basic.rb.md
example/url/: basic.rb  basic.rb.md  ruby_transform.rb
example/yaml/: basic.rb  basic.rb.md
ext/parsanol_native/: Cargo.toml  extconf.rb
ext/parsanol_native/src/: lib.rs
lib/: parsanol.rb
lib/parsanol/: ast_visitor.rb  atoms.rb  buffer.rb  builder_callbacks.rb  cause.rb  context.rb  convenience.rb  edit_tracker.rb  error_reporter.rb  expression.rb  fast_mode.rb  first_set.rb  grammar_builder.rb  incremental_parser.rb  interval_tree.rb  lazy_result.rb  lexer.rb  mermaid.rb  native.rb  optimizer.rb  options.rb  parallel.rb  parser.rb  parslet.rb  parslet_native.bundle  pattern.rb  pool.rb  position.rb  resettable.rb  result.rb  result_builder.rb  result_stream.rb  rope.rb  scope.rb  slice.rb  source.rb  source_location.rb  streaming_parser.rb  string_view.rb  transform.rb  (+2 more)
rakelib/: compile.rake
sig/: parsanol.rbs
sig/parsanol/: buffer.rbs  lazy_result.rbs  pool.rbs  position.rbs  slice.rbs  source.rbs  string_view.rbs
spec/: lexer_spec.rb  parslet_compatibility_spec.rb  performance_spec.rb  spec_helper.rb
spec/acceptance/: examples_spec.rb  infix_parser_spec.rb  mixing_parsers_spec.rb  regression_spec.rb  repetition_and_maybe_spec.rb  unconsumed_input_spec.rb
spec/integration/: array_pooling_spec.rb  buffer_allocation_spec.rb  position_pooling_spec.rb  result_builder_spec.rb  slice_pooling_spec.rb  (+2 more)
(+140 files in other folders)
