[workspace]
resolver = "2"
members = ["ext/parsanol_native"]

[profile.release]
opt-level = 3
lto = "off"
codegen-units = 1
debug = true

# Patches for Ruby 4.0 support (not yet on crates.io)
[patch.crates-io]
magnus = { git = "https://github.com/matsadler/magnus", rev = "4e46772" }
magnus-macros = { git = "https://github.com/matsadler/magnus", rev = "4e46772" }
rb-sys = { git = "https://github.com/oxidize-rb/rb-sys.git", rev = "daa12b6521a0c442a705d7f9a929029119aab1d6" }
