# Parsanol Native Extension
#
# Rust extension for parsanol-ruby that provides:
# - Fast parsing with packrat memoization
# - Three transform modes: RubyTransform, Serialized, ZeroCopy
# - Source location tracking
# - Streaming parsing
# - Incremental parsing for editor integration
# - Custom atom extension points
# - Plugin architecture

[package]
name = "parsanol_native"
version = "3.0.0"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib"]

[dependencies]
# rb-sys for Ruby C API - with link-ruby to link at compile time
rb-sys = { version = "0.9.124", features = ["link-ruby", "global-allocator"] }

# magnus for Ruby bindings (0.8 for Ruby 3.1 support)
magnus = "0.8"

# parsanol parser library
# Using git dependency until parsanol-rs 0.1.6 is released with magnus 0.8
parsanol = { git = "https://github.com/parsanol/parsanol-rs", branch = "chore/update-magnus-0.8.2", features = ["ruby"] }

# Logging
log = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = true  # Enable debug info for better stack traces
