# Parsanol Native Extension
#
# Rust extension for parsanol-ruby that provides:
# - Fast parsing with packrat memoization
# - Three transform modes: RubyTransform, Serialized, ZeroCopy
# - Source location tracking
# - Streaming parsing
# - Incremental parsing for editor integration
# - Custom atom extension points
# - Plugin architecture

[package]
name = "parsanol_native"
version = "1.0.2"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib"]

[dependencies]
# rb-sys for Ruby C API - with link-ruby to link at compile time
# On Windows ARM64, we need to build from source since pre-built binaries aren't available
rb-sys = { version = "0.9.124", features = ["link-ruby", "global-allocator"] }

# magnus for Ruby bindings (0.8 for Ruby 3.1 support)
magnus = "0.8"

# parsanol parser library
parsanol = { version = "0.1.6", features = ["ruby"] }

# Logging
log = "0.4"

