# Parsanol Native Extension
#
# Rust extension for parsanol-ruby that provides:
# - Fast parsing with packrat memoization
# - Three parse modes: ruby, native, json
# - ZeroCopy interface for maximum performance
# - Source location tracking
# - Streaming parsing
# - Incremental parsing for editor integration
# - Custom atom extension points
# - Plugin architecture

[package]
name = "parsanol_native"
version = "1.0.2"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib"]

[dependencies]
# rb-sys for Ruby C API - WITHOUT link-ruby for dynamic extension
# On Windows ARM64, we need to build from source since pre-built binaries aren't available
rb-sys = { version = "0.9.124", features = ["global-allocator"] }

# magnus for Ruby bindings (from crates.io, patched locally for Ruby 4.0 support)
magnus = { version = "0.9" }

# parsanol parser library
parsanol = { path = "/Users/mulgogi/src/parsanol/parsanol-rs/parsanol", features = ["ruby"] }

# Logging
log = "0.4"

[profile.release]
lto = "off"

